feat(site): redesign header and update homepage menu sections
- Replace headers on about, contact, and index pages with a new design including top bar and logo
- Update navigation links and add reservation button in navbar
- Improve header layout for better responsiveness and visual hierarchy
- Enhance navbar styles with new CSS for active and hover states
- Revise homepage hero text and images to reflect updated branding and messaging
- Redesign menu

--- a/menu.html
+++ b/menu.html
@@ -40,63 +40,58 @@
     <!-- Spinner End -->
 
 
-    <!-- Header Start -->
+    <!-- HEADER START -->
     <div class="container-fluid bg-dark px-0">
-        <div class="row gx-0 wow fadeIn" data-wow-delay="0.1s">
-            <div class="col-lg-3 bg-primary d-none d-lg-block">
-                <a href="index.html"
-                    class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-4 text-white text-uppercase">Chefer</h1>
-                </a>
+
+        <!-- TOP BAR -->
+        <div class="container-fluid border-bottom border-secondary">
+        <div class="row py-2 align-items-center px-4">
+
+            <div class="col-lg-6 text-center text-lg-start">
+            <i class="fa fa-envelope text-primary me-2"></i>
+            <span class="text-secondary">info@grampianscafeandbar.com.au</span>
             </div>
-            <div class="col-lg-9">
-                <div class="row gx-0 d-none d-lg-flex bg-dark">
-                    <div class="col-6 px-5 text-start">
-                        <div class="h-100 d-inline-flex align-items-center py-2 me-4">
-                            <i class="fa fa-envelope text-primary me-2"></i>
-                            <p class="mb-0">info@example.com</p>
-                        </div>
-                    </div>
-                    <div class="col-6 px-5 text-end">    
-                        <div class="h-100 d-inline-flex align-items-center py-2">
-                            <i class="fa fa-phone-alt text-primary me-2"></i>
-                            <p class="mb-0">+012 345 6789</p>
-                        </div>
-                    </div>
-                </div>
-                <nav class="navbar navbar-expand-lg navbar-dark p-3 p-lg-0 px-lg-5" style="background: #111111;">
-                    <a href="index.html" class="navbar-brand d-block d-lg-none">
-                        <h1 class="m-0 display-4 text-primary text-uppercase">Chefer</h1>
-                    </a>
-                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
-                        data-bs-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="menu.html" class="nav-item nav-link active">Menu</a>
-                            <a href="team.html" class="nav-item nav-link">Chefs</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="blog.html" class="dropdown-item">Blog Post</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Error</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
-                        <div class="d-none d-lg-flex align-items-center py-2">
-                            <a class="btn btn-primary rounded-pill px-3" href="https://htmlcodex.com/downloading/?item=3537">Buy Pro Version</a>
-                        </div>
-                    </div>
-                </nav>
+
+            <div class="col-lg-6 text-center text-lg-end">
+            <i class="fa fa-phone-alt text-primary me-2"></i>
+            <span class="text-secondary">+012 345 6789</span>
             </div>
+
         </div>
+        </div>
+
+
+        <!-- NAVBAR -->
+        <nav class="navbar navbar-expand-lg navbar-dark px-4 px-lg-5 py-3" style="background:#111;">
+            
+            <!-- LOGO -->
+            <a href="index.html" class="navbar-brand">
+                <img src="img/logo.jpeg" alt="Logo" height="80">
+            </a>
+
+            <!-- TOGGLER -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- MENU -->
+            <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="menu.html" class="nav-item nav-link">Menu</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div>
+            </div>
+
+            <!-- BUTTON -->
+            <div class="d-none d-lg-block">
+                <a href="#" class="btn btn-primary rounded-pill px-4">RESERVARION NOW </a>
+            </div>
+
+        </nav>
     </div>
-    <!-- Header End -->
+    <!-- HEADER END -->
 
 
     <!-- Hero Start -->
