--- a/reservation.html
+++ b/reservation.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHEFER - Chef Website Template</title>
+    <title>CHEFER - Reservation Page</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -77,7 +77,7 @@
             <!-- MENU -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="menu.html" class="nav-item nav-link">Menu</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -86,7 +86,7 @@
 
             <!-- BUTTON -->
             <div class="d-none d-lg-block">
-                <a href="#" class="btn btn-primary rounded-pill px-4">RESERVARION NOW </a>
+                <a href="reservation.html" class="btn btn-primary rounded-pill px-4">RESERVATION NOW </a>
             </div>
 
         </nav>
@@ -97,52 +97,130 @@
     <!-- Hero Start -->
     <div class="container-fluid p-5 mb-5 bg-dark text-secondary">
         <div class="container wow fadeIn" data-wow-delay="0.1s">
-            <h1 class="display-1 text-secondary text-center mb-0">Contact</h1>
+            <h1 class="display-1 text-secondary text-center mb-0">Reservation</h1>
         </div>
     </div>
     <!-- Hero End -->
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid p-5">
-        <div class="mb-5 text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px; margin: auto;">
-            <h5 class="section-title">Contact Us</h5>
-            <h1 class="display-3">Get In Touch</h1>
-        </div>
-        <div class="row g-5">
-            <div class="col-lg-6">
-                <div class="bg-light rounded h-100 p-5">
-                    <h5 class="lh-base text-center mb-4">Receive messages instantly with our PHP and Ajax contact form - available in the <a href="https://htmlcodex.com/downloading/?item=3537">Pro Version</a> only.</h5>
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-6">
-                                <input type="text" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;">
-                            </div>
-                            <div class="col-6">
-                                <input type="email" class="form-control bg-white border-0 px-4" placeholder="Your Email" style="height: 55px;">
-                            </div>
-                            <div class="col-12">
-                                <input type="text" class="form-control bg-white border-0 px-4" placeholder="Subject" style="height: 55px;">
-                            </div>
-                            <div class="col-12">
-                                <textarea class="form-control bg-white border-0 px-4 py-3" rows="4" placeholder="Message"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+    <!-- Reservation Start -->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="mb-5 text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px; margin: auto;">
+                <h5 class="section-title">Book Your Table</h5>
+                <h1 class="display-3 mb-0">Reserve Your Perfect Dining Experience</h1>
             </div>
-            <div class="col-lg-6">
-                <iframe class="w-100 rounded"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                    frameborder="0" style="height: 100%; min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe>
+            
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="wow fadeIn" data-wow-delay="0.3s">
+                        <img class="img-fluid rounded" src="img/home5.jpg" alt="Reservation Image">
+                        <div class="position-absolute top-0 start-0 p-4 text-dark" style="background: rgba(255, 255, 255, 0.8); max-width: 300px;">
+                            <h5 class="mb-3"><i class="fas fa-clock text-primary me-2"></i>Opening Hours</h5>
+                            <p class="mb-0">Monday-Friday: 9AM - 11PM</p>
+                            <p class="mb-0">Saturday-Sunday: 10AM - 12AM</p>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-lg-6">
+                    <div class="bg-light rounded p-5 wow fadeIn" data-wow-delay="0.5s">
+                        <form>
+                            <div class="row g-3">
+                                <div class="col-12">
+                                    <h4 class="mb-4">Fill in your details</h4>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;">
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="email" class="form-control bg-white border-0 px-4" placeholder="Your Email" style="height: 55px;">
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="tel" class="form-control bg-white border-0 px-4" placeholder="Phone Number" style="height: 55px;">
+                                </div>
+                                <div class="col-md-6">
+                                    <select class="form-select bg-white border-0 px-4" style="height: 55px;">
+                                        <option selected>No. of Guests</option>
+                                        <option value="1">1 Person</option>
+                                        <option value="2">2 Persons</option>
+                                        <option value="3">3 Persons</option>
+                                        <option value="4">4 Persons</option>
+                                        <option value="5">5 Persons</option>
+                                        <option value="6">6 Persons</option>
+                                        <option value="7">7 Persons</option>
+                                        <option value="8">8 Persons</option>
+                                        <option value="9">9+ Persons</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="date" class="form-control bg-white border-0 px-4" placeholder="Date" style="height: 55px;">
+                                </div>
+                                <div class="col-md-6">
+                                    <select class="form-select bg-white border-0 px-4" style="height: 55px;">
+                                        <option selected>Preferred Time</option>
+                                        <option value="1">09:00 AM</option>
+                                        <option value="2">10:00 AM</option>
+                                        <option value="3">11:00 AM</option>
+                                        <option value="4">12:00 PM</option>
+                                        <option value="5">01:00 PM</option>
+                                        <option value="6">02:00 PM</option>
+                                        <option value="7">03:00 PM</option>
+                                        <option value="8">04:00 PM</option>
+                                        <option value="9">05:00 PM</option>
+                                        <option value="10">06:00 PM</option>
+                                        <option value="11">07:00 PM</option>
+                                        <option value="12">08:00 PM</option>
+                                        <option value="13">09:00 PM</option>
+                                        <option value="14">10:00 PM</option>
+                                        <option value="15">11:00 PM</option>
+                                    </select>
+                                </div>
+                                <div class="col-12">
+                                    <textarea class="form-control bg-white border-0 px-4 py-3" rows="4" placeholder="Special Requests"></textarea>
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Table Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
+    <!-- Reservation End -->
+
+
+    <!-- Special Offers Start -->
+    <div class="container-fluid py-5" style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('img/hero-1.jpg') center center no-repeat; background-size: cover;">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="text-center bg-primary p-4 rounded">
+                        <h5 class="text-white mb-3">Early Bird Discount</h5>
+                        <h3 class="text-white mb-0">15% Off</h3>
+                        <p class="text-white mb-0">For reservations before 6PM</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="text-center bg-primary p-4 rounded">
+                        <h5 class="text-white mb-3">Weekend Special</h5>
+                        <h3 class="text-white mb-0">Free Dessert</h3>
+                        <p class="text-white mb-0">For weekend reservations</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="text-center bg-primary p-4 rounded">
+                        <h5 class="text-white mb-3">Group Booking</h5>
+                        <h3 class="text-white mb-0">Special Rates</h3>
+                        <p class="text-white mb-0">For parties of 6 or more</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Special Offers End -->
 
 
     <!-- Instagram Start -->
