--- a/contact.html
+++ b/contact.html
@@ -217,12 +217,12 @@
 
                     <div class="d-flex mb-2">
                         <i class="bi bi-envelope-open text-primary me-2"></i>
-                        <p class="mb-0">info@grampianscafeandbar.com.au</p>
+                        <p class="mb-0">manger.grampianscafe1@gmail.com</p>
                     </div>
 
                     <div class="d-flex mb-2">
                         <i class="bi bi-telephone text-primary me-2"></i>
-                        <p class="mb-0">+61 353 564 511</p>
+                        <p class="mb-0">+61 457 810 507</p>
                     </div>
 
                     <div class="d-flex mt-4">
@@ -256,15 +256,16 @@
                 <div class="col-lg-4 col-md-12 col-sm-12 pt-5 mb-5">
                     <h3 class="text-light mb-4">Our Location</h3>
 
-                    <div class="rounded overflow-hidden" style="min-height:300px;">
+                    <div class="rounded overflow-hidden" style="min-height:200px;">
                         <iframe 
-                            src="https://www.google.com/maps?q=Grampians%20Restaurant%20Cafe%20Halls%20Gap&output=embed"
-                            loading="lazy"
-                            style="height:100%; width:100%; border:0;"
-                            allowfullscreen=""
-                            aria-hidden="false"
-                            tabindex="0">
-                        </iframe>
+    src="https://www.google.com/maps?q=Grampians%20Restaurant%20Cafe%20Halls%20Gap&output=embed"
+    loading="lazy"
+    style="height:250px; width:100%; border:0;"
+    allowfullscreen
+    aria-hidden="false"
+    tabindex="0">
+</iframe>
+
                     </div>
                 </div>
 
