--- a/menu.html
+++ b/menu.html
@@ -392,11 +392,11 @@
                         </div>
                         <div class="d-flex mb-2 text-center">
                             <i class="bi bi-envelope-open text-primary me-2"></i>
-                            <p class="mb-0">info@grampianscafeandbar.com.au</p>
+                            <p class="mb-0">manger.grampianscafe1@gmail.com</p>
                         </div>
                         <div class="d-flex mb-2">
                             <i class="bi bi-telephone text-primary me-2"></i>
-                            <p class="mb-0">+61 353 564 511</p>
+                            <p class="mb-0">+61 457 810 507</p>
                         </div>
                         <div class="d-flex mt-4">
                             <a class="btn btn-primary btn-square rounded-circle me-2" href="#"><i
@@ -423,20 +423,22 @@
                                     class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 pt-5 mb-5">
-                        <h3 class="text-light mb-4">More Links</h3>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-secondary mb-2" href="index.html"><i
-                                    class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                            <a class="text-secondary mb-2" href="about.html"><i
-                                    class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                            <a class="text-secondary mb-2" href="menu.html"><i
-                                    class="bi bi-arrow-right text-primary me-2"></i>Food Menu</a>
-                           
-                            <a class="text-secondary" href="contact.html"><i
-                                    class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                        </div>
+                     <!-- Google Map -->
+                <div class="col-lg-4 col-md-12 col-sm-12 pt-5 mb-5">
+                    <h3 class="text-light mb-4">Our Location</h3>
+
+                    <div class="rounded overflow-hidden" style="min-height:200px;">
+                        <iframe 
+    src="https://www.google.com/maps?q=Grampians%20Restaurant%20Cafe%20Halls%20Gap&output=embed"
+    loading="lazy"
+    style="height:250px; width:100%; border:0;"
+    allowfullscreen
+    aria-hidden="false"
+    tabindex="0">
+</iframe>
+
                     </div>
+                </div>
                 </div>
             </div>
            
