fix(contact): update contact email and phone number site-wide
- Changed contact email to manger.grampianscafe1@gmail.com in multiple pages
- Updated phone number to +61 457 810 507 across all contact info sections

feat(menu): redesign menu layout with categorized cards and detailed items

- Implemented new menu card design with categories: Breakfast, Pizza, etc.
- Added item descriptions and prices with improved typography and spacing
- Replaced old menu grid with flexible flexbox layout for better responsiveness
- Included section titles with underline accent for visual hierarchy

style(hero): enhance hero sections with blurred backgrounds and animations

- Added blurred background image overlay on index and menu hero sections
- Introduced floating and scale animations on hero images for dynamic effect
- Styled hero text blocks with semi-transparent backgrounds and fade-in animations

style(menu): add new CSS styles for menu cards and hero elements

- Created styles for menu container, menu items, titles, descriptions, and prices
- Added hover effects for menu item cards with shadow and transform transitions
- Implemented scrollable breakfast menu container with custom scrollbar styling
- Added animations keyframes for float effect and fade-in-up

refactor(menu): rename menu sections for clarity and update markup

- Changed Lunch section to Main Meal and Dinner section to Kids Menu on home page
- Updated menu item markup to simplified flexbox structure with clearer content grouping
- Removed obsolete blog section from menu page and replaced with a show more button

style(menu-section): adjust padding and margin for menu columns and responsiveness

- Refined padding on container, row, and columns for consistent alignment and spacing
- Applied media queries to adjust padding on various screen sizes for optimal layout

--- a/about.html
+++ b/about.html
@@ -49,12 +49,12 @@
 
             <div class="col-lg-6 text-center text-lg-start">
             <i class="fa fa-envelope text-primary me-2"></i>
-            <span class="text-secondary">info@grampianscafeandbar.com.au</span>
+            <span class="text-secondary">manger.grampianscafe1@gmail.com</span>
             </div>
 
             <div class="col-lg-6 text-center text-lg-end">
             <i class="fa fa-phone-alt text-primary me-2"></i>
-            <span class="text-secondary">+012 345 6789</span>
+            <span class="text-secondary">+61 457 810 507</span>
             </div>
 
         </div>
