--- a/reservation.html
+++ b/reservation.html
@@ -49,12 +49,12 @@
 
             <div class="col-lg-6 text-center text-lg-start">
             <i class="fa fa-envelope text-primary me-2"></i>
-            <span class="text-secondary">info@grampianscafeandbar.com.au</span>
+            <span class="text-secondary">manger.grampianscafe1@gmail.com</span>
             </div>
 
             <div class="col-lg-6 text-center text-lg-end">
             <i class="fa fa-phone-alt text-primary me-2"></i>
-            <span class="text-secondary">+012 345 6789</span>
+            <span class="text-secondary">+61 457 810 507</span>
             </div>
 
         </div>
