fix(html): update page titles and reservation button links
- Change page titles from "CHEFER - Chef Website Template" to "GrampiansCafeAndBar"
- Update reservation button links from "#" to "/reservation.html" in multiple pages
- Ensure consistent branding and navigation across the site pages

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHEFER - Chef Website Template</title>
+    <title>GrampiansCafeAndBar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -86,7 +86,7 @@
 
             <!-- BUTTON -->
             <div class="d-none d-lg-block">
-                <a href="#" class="btn btn-primary rounded-pill px-4">RESERVARION NOW </a>
+                <a href="/reservation.html" class="btn btn-primary rounded-pill px-4">RESERVARION NOW </a>
             </div>
 
         </nav>
