--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CHEFER - Chef Website Template</title>
+    <title>GrampiansCafeAndBar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -86,7 +86,7 @@
 
             <!-- BUTTON -->
             <div class="d-none d-lg-block">
-                <a href="#" class="btn btn-primary rounded-pill px-4">RESERVARION NOW </a>
+                <a href="/reservation.html" class="btn btn-primary rounded-pill px-4">RESERVARION NOW </a>
             </div>
 
         </nav>
