fix(reservation): comment out left column image section in layout
- Temporarily disable the div containing the reservation image on the left side
- Preserve the image and its overlay text for possible future use
- Keep the right column form section active and unchanged
- Maintain indentation and structure for easy reactivation later

--- a/reservation.html
+++ b/reservation.html
@@ -112,7 +112,7 @@
             </div>
             
             <div class="row g-5 align-items-center">
-                <div class="col-lg-6">
+                <!-- <div class="col-lg-6">
                     <div class="wow fadeIn" data-wow-delay="0.3s">
                         <img class="img-fluid rounded" src="img/home5.jpg" alt="Reservation Image">
                         <div class="position-absolute top-0 start-0 p-4 text-dark" style="background: rgba(255, 255, 255, 0.8); max-width: 300px;">
@@ -121,7 +121,7 @@
                             <p class="mb-0">Saturday-Sunday: 10AM - 12AM</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <div class="col-lg-6">
                     <div class="bg-light rounded p-5 wow fadeIn" data-wow-delay="0.5s">
