--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,10 @@
             <!-- MENU -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="menu.html" class="nav-item nav-link">Menu</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 </div>
             </div>
 
@@ -95,12 +95,16 @@
 
 
     <!-- Hero Start -->
-    <div class="container-fluid p-5 mb-5 bg-dark text-secondary">
-        <div class="container wow fadeIn" data-wow-delay="0.1s">
-            <h1 class="display-1 text-secondary text-center mb-0">Contact</h1>
+    <div class="container-fluid p-5 mb-5 bg-dark text-secondary position-relative">
+        <div class="position-absolute top-0 start-0 w-100 h-100 overflow-hidden" style="z-index: 1;">
+            <img src="img/menu1.png" class="img-fluid h-100 w-100" style="object-fit: cover; filter: blur(5px); opacity: 0.7;">
+        </div>
+        <div class="container wow fadeIn" data-wow-delay="0.1s" style="position: relative; z-index: 2;">
+            <h1 class="display-1 text-secondary text-center mb-0">Contact us</h1>
         </div>
     </div>
     <!-- Hero End -->
+
 
 
     <!-- Contact Start -->
