--- a/index.html
+++ b/index.html
@@ -151,19 +151,17 @@
                     <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                         <div class="bg-light rounded p-4">
                             <img class="img-fluid bg-primary rounded-circle mb-3" src="img/feature-1.png" style="width: 80px; height: 80px;">
-                            <h4>Master Chefs</h4>
-                            <p class="mb-0">Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam
-                                ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing
-                                labore.</p>
+                            <h4>Our Food</h4>
+                            <p class="mb-0">Our menu blends classic flavors with modern creativity, using fresh
+                local ingredients to craft unforgettable dishes.</p>
                         </div>
                     </div>
                     <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                         <div class="bg-light rounded p-4">
                             <img class="img-fluid bg-primary rounded-circle mb-3" src="img/feature-3.png" style="width: 80px; height: 80px;">
-                            <h4>Quality Food</h4>
-                            <p class="mb-0">Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam
-                                ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing
-                                labore.</p>
+                            <h4>Taste The Supreme Delicacies</h4>
+                            <p class="mb-0">From aromatic coffees to hearty meals and handcrafted desserts,
+                every bite is prepared with love and passion.</p>
                         </div>
                     </div>
                 </div>
