--- a/menu.html
+++ b/menu.html
@@ -77,9 +77,9 @@
             <!-- MENU -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu</a>
+                    <a href="menu.html" class="nav-item nav-link active">Menu</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
             </div>
