--- a/reservation.html
+++ b/reservation.html
@@ -94,15 +94,6 @@
     <!-- HEADER END -->
 
 
-    <!-- Hero Start -->
-    <div class="container-fluid p-5 mb-5 bg-dark text-secondary">
-        <div class="container wow fadeIn" data-wow-delay="0.1s">
-            <h1 class="display-1 text-secondary text-center mb-0">Reservation</h1>
-        </div>
-    </div>
-    <!-- Hero End -->
-
-
     <!-- Reservation Start -->
     <div class="container-fluid py-5">
         <div class="container">
@@ -111,19 +102,9 @@
                 <h1 class="display-3 mb-0">Reserve Your Perfect Dining Experience</h1>
             </div>
             
-            <div class="row g-5 align-items-center">
-                <!-- <div class="col-lg-6">
-                    <div class="wow fadeIn" data-wow-delay="0.3s">
-                        <img class="img-fluid rounded" src="img/home5.jpg" alt="Reservation Image">
-                        <div class="position-absolute top-0 start-0 p-4 text-dark" style="background: rgba(255, 255, 255, 0.8); max-width: 300px;">
-                            <h5 class="mb-3"><i class="fas fa-clock text-primary me-2"></i>Opening Hours</h5>
-                            <p class="mb-0">Monday-Friday: 9AM - 11PM</p>
-                            <p class="mb-0">Saturday-Sunday: 10AM - 12AM</p>
-                        </div>
-                    </div>
-                </div> -->
+            <div class="row align-items-center">
                 
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="bg-light rounded p-5 wow fadeIn" data-wow-delay="0.5s">
                         <form>
                             <div class="row g-3">
@@ -223,33 +204,6 @@
     <!-- Special Offers End -->
 
 
-    <!-- Instagram Start -->
-    <div class="container-fluid position-relative instagram p-0 mt-5">
-        <a href="" class="d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle bg-white rounded-circle" style="width: 100px; height: 100px; z-index: 1;">
-            <i class="fab fa-instagram fa-2x text-secondary"></i>
-        </a>
-        <div class="row g-0">
-            <div class="col-lg-2 col-md-3 col-sm-4 wow fadeIn" data-wow-delay="0.1s">
-                <img class="img-fluid" src="img/menu-2.jpg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 wow fadeIn" data-wow-delay="0.2s">
-                <img class="img-fluid" src="img/menu-3.jpg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 wow fadeIn" data-wow-delay="0.3s">
-                <img class="img-fluid" src="img/menu-4.jpg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 wow fadeIn" data-wow-delay="0.4s">
-                <img class="img-fluid" src="img/menu-5.jpg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 wow fadeIn" data-wow-delay="0.5s">
-                <img class="img-fluid" src="img/menu-6.jpg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4 wow fadeIn" data-wow-delay="0.6s">
-                <img class="img-fluid" src="img/menu-7.jpg" alt="">
-            </div>
-        </div>
-    </div>
-    <!-- Instagram End -->
 
 
     <!-- Instagram Start -->
