Remove unused files and update navigation and styling for improved user experience

--- a/reservation.html
+++ b/reservation.html
@@ -86,7 +86,7 @@
 
                  <!-- BUTTON -->
             <div class="ms-3">
-                <a href="/reservation.html" class="btn btn-primary rounded-pill px-4">
+                <a href="reservation.html" class="btn btn-primary rounded-pill px-4">
                     RESERVATION NOW
                 </a>
             </div>
@@ -105,9 +105,9 @@
     <div class="container">
 
         <!-- Heading -->
-        <div class="mb-5 text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 750px; margin: auto;">
+        <div class="mb-5 text-center wow fadeIn" data-wow-delay="0.1s" style="margin: auto;">
             <h5 class="section-title">Book Your Table</h5>
-            <h1 class="display-3 mb-3">Reserve Your Perfect Dining Experience</h1>
+            <h1 class="display-4 mb-0">Reserve Your Perfect Dining Experience</h1>
             <p class="text-muted">
                 Enjoy great food, warm ambience and unforgettable moments at
                 Grampians Restaurant Cafe & Bar.
