--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
              <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav mx-auto px-6">
                     <a href="index.html" class="nav-item nav-link mx-4">Home</a>
-                    <a href="about.html" class="nav-item nav-link mx-4">About</a>
+                    <a href="about.html" class="nav-item nav-link mx-4 active">About</a>
                     <a href="menu.html" class="nav-item nav-link mx-4">Menu</a>
                     <a href="contact.html" class="nav-item nav-link mx-4">Contact</a>
                 </div>
@@ -85,7 +85,7 @@
 
                  <!-- BUTTON -->
             <div class="ms-3">
-                <a href="/reservation.html" class="btn btn-primary rounded-pill px-4">
+                <a href="reservation.html" class="btn btn-primary rounded-pill px-4">
                     RESERVATION NOW
                 </a>
             </div>
@@ -104,7 +104,7 @@
             <img src="img/home3.jpg" class="img-fluid h-100 w-100" style="object-fit: cover; filter: blur(5px); opacity: 0.7;">
         </div>
         <div class="container wow fadeIn" data-wow-delay="0.1s" style="position: relative; z-index: 2;">
-            <h1 class="display-1 text-secondary text-center mb-0">About</h1>
+            <h1 class="display-1 text-white text-center mb-0">About</h1>
         </div>
     </div>
     <!-- Hero End -->
