--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <!-- MENU -->
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav mx-auto px-6">
-                    <a href="index.html" class="nav-item nav-link mx-4">Home</a>
+                    <a href="index.html" class="nav-item nav-link mx-4 active">Home</a>
                     <a href="about.html" class="nav-item nav-link mx-4">About</a>
                     <a href="menu.html" class="nav-item nav-link mx-4">Menu</a>
                     <a href="contact.html" class="nav-item nav-link mx-4">Contact</a>
@@ -112,7 +112,7 @@
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
                     <img class="img-fluid rounded mb-3" src="img/hero-2.jpg">
                     <p>
-                        <i class="bi bi-arrow-down animate-up-down" style="font-size: 3rem;"></i>
+                        <i class="bi bi-arrow-down animate-up-down text-white" style="font-size: 3rem;"></i>
                     </p>
                     <p class="mb-0 hero-text wow fadeInUp" data-wow-delay="0.4s">
                        At Grampians Cafe and Bar, we are all about bringing people together over great food and drinks. Located in the lap of Halls Gap, Western Victoria, our beautiful venue celebrates the region’s rich delicacies and supreme spirit. If you are a local resident or just passing through the mountains and wildflowers of Grampians National Park, join us for a meal that feels like home—only with better views.
@@ -128,7 +128,7 @@
                         Mitigate your mid-day cravings with our favourites like Chicken Schnitzel burger or vibrant Steak Sandwich bursting with seasonal ingredients.
                     </p>
                     <p>
-                        <i class="bi bi-arrow-up animate-up-down" style="font-size: 3rem;"></i>
+                        <i class="bi bi-arrow-up animate-up-down text-white" style="font-size: 3rem;"></i>
                     </p>
                     <img class="img-fluid rounded hero-content-img wow fadeIn" data-wow-delay="0.8s" src="img/hero-3.jpg">
                 </div>
@@ -141,37 +141,38 @@
     <!-- About Start -->
     <div class="container-fluid p-5">
         <div class="row gx-5">
-            <div class="col-lg-5 mb-5 mb-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 500px;">
+            <div class="col-lg-6 mb-5 mb-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded-circle rounded-bottom rounded-end"
-                        src="img/home5.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100"
+                        src="img/aboutbg.jpg" style="object-fit: fit;">
                 </div>
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-6">
                 <div class="mb-4 wow fadeIn" data-wow-delay="0.2s">
                     <h5 class="section-title">About Us</h5>
-                    <h1 class="display-3 mb-0">Come for the Meals… Stay for the Feels</h1>
+                    <h1 class="display-4 mb-0">Come for the Meals… Stay for the Feels</h1>
                 </div>
                 <p class="mb-4 wow fadeIn" data-wow-delay="0.3s">At Grampians Café and Bar, we focus on community integration and take pride on ourselves for connecting people with exquisite pabulum. who walks-in through our door. Our team of friendly staff out there always try to make sure your time with us gets as enjoyable and memorable as it can. We have minutely designed our space to be the most welcoming one, with a vibe that is both casual and comforting. It is simply a place where you can peacefully enjoy every bite indulging in the moment.</p>
-                <div class="row">
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
-                        <div class="bg-light rounded p-4">
-                            <img class="img-fluid bg-primary rounded-circle mb-3" src="img/feature-1.png" style="width: 80px; height: 80px;">
-                            <h4>Our Food</h4>
-                            <p class="mb-0">Our menu blends classic flavors with modern creativity, using fresh
-                local ingredients to craft unforgettable dishes.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="bg-light rounded p-4">
-                            <img class="img-fluid bg-primary rounded-circle mb-3" src="img/feature-3.png" style="width: 80px; height: 80px;">
-                            <h4>Taste The Supreme Delicacies</h4>
-                            <p class="mb-0">From aromatic coffees to hearty meals and handcrafted desserts,
-                every bite is prepared with love and passion.</p>
-                        </div>
-                    </div>
-                </div>
                 <a href="about.html" class="btn btn-primary py-3 px-5 mt-3 wow fadeIn" data-wow-delay="0.4s">Read More</a>
+
+            </div>
+        </div>
+        <div class="row pt-5">
+            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                <div class="bg-light rounded p-4">
+                    <img class="img-fluid bg-primary rounded-circle mb-3" src="img/feature-1.png" style="width: 80px; height: 80px;">
+                    <h4>Our Food</h4>
+                    <p class="mb-0">Our menu blends classic flavors with modern creativity, using fresh
+        local ingredients to craft unforgettable dishes.</p>
+                </div>
+            </div>
+            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="bg-light rounded p-4">
+                    <img class="img-fluid bg-primary rounded-circle mb-3" src="img/feature-3.png" style="width: 80px; height: 80px;">
+                    <h4>Taste The Supreme Delicacies</h4>
+                    <p class="mb-0">From aromatic coffees to hearty meals and handcrafted desserts,
+        every bite is prepared with love and passion.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -240,7 +241,7 @@
     <div class="container-fluid menu py-5 px-0 menu-section">
         <div class="mb-5 text-center wow fadeIn" data-wow-delay="0.1s" style="max-width: 700px; margin: auto;">
             <h5 class="section-title">Our Menu</h5>
-            <h1 class="display-3 mb-0">Hands Craft More Than Meals</h1>
+            <h1 class="display-4 mb-0">Hands Craft More Than Meals</h1>
         </div>
         <div class="row">
             <!-- Breakfast Menu -->
