--- a/contact.html
+++ b/contact.html
@@ -127,6 +127,7 @@
                 </h5>
                 <form action="sendmail.php" method="POST" id="contactForm">
                     <div class="row g-3">
+                        <input type="hidden" name="type" value="contact">
                         <div class="col-6">
                             <input type="text" name="name" class="form-control bg-white border-0 px-4" placeholder="Your Name" style="height: 55px;" required>
                         </div>
