--- a/reservation.html
+++ b/reservation.html
@@ -143,6 +143,8 @@
                     <form>
                         <div class="row g-3">
 
+                            <input type="hidden" name="type" value="reservation">
+
                             <div class="col-md-6">
                                 <input type="text" class="form-control border-0 bg-light px-4"
                                        placeholder="Your Name" style="height:55px;">
