--- a/reservation.html
+++ b/reservation.html
@@ -140,7 +140,7 @@
         
                     <h4 class="mb-4 text-center">Fill in your details</h4>
 
-                        <form action="sendmail.php" method="POST" id="reservationForm">
+                        <form id="reservationForm">
                             <div class="row g-3">
 
                                 <!-- REQUIRED FOR BACKEND ROUTING -->
