--- a/contact.html
+++ b/contact.html
@@ -80,10 +80,10 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
 
             <div class="navbar-nav mx-auto px-6">
-                <a href="index.php" class="nav-item nav-link mx-4 <?php echo $currentPage === 'index' ? 'active' : ''; ?>">Home</a>
-                <a href="about.php" class="nav-item nav-link mx-4 <?php echo $currentPage === 'about' ? 'active' : ''; ?>">About</a>
-                <a href="menu.php" class="nav-item nav-link mx-4 <?php echo $currentPage === 'menu' ? 'active' : ''; ?>">Menu</a>
-                <a href="contact.php" class="nav-item nav-link mx-4 <?php echo $currentPage === 'contact' ? 'active' : ''; ?>">Contact</a>
+                <a href="index.html" class="nav-item nav-link mx-4">Home</a>
+                <a href="about.html" class="nav-item nav-link mx-4">About</a>
+                <a href="menu.html" class="nav-item nav-link mx-4">Menu</a>
+                <a href="contact.html" class="nav-item nav-link mx-4 active">Contact</a>
             </div>
 
             <!-- DESKTOP RESERVATION BUTTON -->
@@ -97,7 +97,7 @@
         </nav>
         <!-- MOBILE RESERVATION BUTTON -->
         <div class="d-lg-none bg-dark px-3 py-2 text-center sticky-top">
-            <a href="reservation.php" class="btn btn-primary w-100 rounded-pill">
+            <a href="reservation.html" class="btn btn-primary w-100 rounded-pill">
                 RESERVATION NOW
             </a>
         </div>
