--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark px-4 px-lg-5 py-3" style="background:#111;">
 
         <!-- LOGO -->
-        <a href="index.php" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
             <img src="img/logo.jpeg" alt="Logo" height="80">
         </a>
 
@@ -87,7 +87,7 @@
 
             <!-- DESKTOP RESERVATION BUTTON -->
             <div class="d-none d-lg-block ms-3">
-                <a href="reservation.php" class="btn btn-primary rounded-pill px-4">
+                <a href="reservation.html" class="btn btn-primary rounded-pill px-4">
                     RESERVATION NOW
                 </a>
             </div>
