--- a/contact.html
+++ b/contact.html
@@ -343,6 +343,7 @@ tabindex="0">
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
