--- a/contact.html
+++ b/contact.html
@@ -151,10 +151,11 @@
                         </div>
 
                         <div class="col-12">
-                            <!-- 🔥 type=button -->
-                            <button type="button" id="contactSubmit" class="btn btn-primary w-100 py-3">
-                                <span class="btn-text">Send Message</span>
-                                <span class="btn-loader d-none">Sending...</span>
+                            <button
+                                type="button"
+                                id="contactSubmit"
+                                class="btn btn-primary w-100 py-3">
+                                Send Message
                             </button>
                         </div>
                     </div>
