--- a/contact.html
+++ b/contact.html
@@ -130,36 +130,18 @@
                 <h5 class="lh-base text-center mb-4">
                     Get in touch with our friendly representatives for pre-booking or other queries you might have.
                 </h5>
-                <form id="contactForm" method="POST" action="sendmail.php" novalidate>
-                    <div class="row g-3">
+                <form id="contactForm" method="POST" novalidate>
                         <input type="hidden" name="type" value="contact">
 
-                        <div class="col-6">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-                        </div>
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <input type="text" name="subject" placeholder="Subject" required>
+                        <textarea name="message" placeholder="Message" required></textarea>
 
-                        <div class="col-6">
-                            <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-                        </div>
-
-                        <div class="col-12">
-                            <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-                        </div>
-
-                        <div class="col-12">
-                            <textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-                        </div>
-
-                        <div class="col-12">
-                            <button
-                                type="button"
-                                id="contactSubmit"
-                                class="btn btn-primary w-100 py-3">
-                                Send Message
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                        <button type="button" id="contactSubmit" class="btn btn-primary">
+                            Send Message
+                        </button>
+                    </form>
 
                 <div id="formMessage" class="mt-3 text-center"></div>
 
@@ -358,16 +340,7 @@ tabindex="0">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Template Javascript -->
-    <!-- <script src="js/main.js"></script> -->
-
-
-    <script>
-        alert('JS LOADED');
-
-        $(document).on('click', '#contactSubmit', function () {
-            alert('BUTTON CLICKED');
-        });
-    </script>
+    <script src="js/main.js"></script>
 </body>
 
 
