--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                         <div class="col-md-6">
                                     <input type="text"
                                         name="name"
-                                        class="form-control border-0 bg-light px-4"
+                                        class="form-control bg-white border-0 px-4"
                                         placeholder="Your Name"
                                         style="height:55px;"
                                         required>
@@ -144,7 +144,7 @@
                         <div class="col-md-6">
                             <input type="email"
                                 name="email"
-                                class="form-control border-0 bg-light px-4"
+                                class="form-control bg-white border-0 px-4"
                                 placeholder="Your Email"
                                 style="height:55px;"
                                 required>
@@ -353,7 +353,6 @@ tabindex="0">
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
